fix: enhance hero section styling for improved responsiveness and readability

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -70,62 +70,25 @@
 .hero .hero__content .hero__content-info .hero__content-info-text {
   font-family: Roboto;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 100%;
+  font-size: 17px;
+  line-height: 1.2;
   letter-spacing: 0%;
-  vertical-align: middle;
   margin-bottom: 36px;
+
+  width: 367px;
+  height: 59px;
+  display: -webkit-box;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .hero .hero__content .hero__content-info .hero__content-info-buttons {
   display: flex;
   gap: 14px;
 }
-
-
-/* Tablet */
-@media (min-width: 768px) and (max-width: 1024px) {
-  .hero {
-    height: 394px;
-  }
-
-  .hero .hero__content {
-    padding-block: 40px;
-    padding-left: 20px;
-  }
-
-  .hero .hero__content .hero__content-title {
-    font-size: 44px;
-  }
-
-  .hero .hero__content-background .hero__content-background-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-}
-
-/* Mobile */
-@media (max-width: 767px) {
-  .hero .hero__content {
-    padding-block: 36px;
-    padding-left: 32px;
-  }
-
-  .hero .hero__content .hero__content-title {
-    font-size: 32px;
-  }
-
-  .hero .hero__content-background .hero__content-background-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-}
-
-
 
 
 
@@ -137,15 +100,15 @@
 }
 
 .star.star {
-  background-image: url('/img/star.svg');
+  background-image: url('../img/star.svg');
 }
 
 .star.star-half {
-  background-image: url('/img/star-half.svg');
+  background-image: url('../img/star-half.svg');
 }
 
 .star.star-outline {
-  background-image: url('/img/star-outline.svg');
+  background-image: url('../img/star-outline.svg');
 }
 
 .btn {
@@ -179,3 +142,81 @@
   line-height: 24px;
   border: 1px solid var(--white);
 }
+
+/* Tablet */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .hero {
+    height: 394px;
+  }
+
+  .hero .hero__content {
+    padding-block: 40px;
+    padding-left: 20px;
+  }
+
+  .hero .hero__content .hero__content-title {
+    font-size: 44px;
+  }
+
+  .hero .hero__content-background .hero__content-background-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+  .star {
+    width: 20px;
+    height: 20px;
+    background-size: contain;
+  }
+}
+
+/* Mobile */
+@media (max-width: 767px) {
+  .hero {
+    height: 380px;
+  }
+
+  .hero .hero__content {
+    padding-block: 36px;
+    padding-left: 32px;
+  }
+
+  .hero .hero__content .hero__content-title {
+    max-width:232px;
+    font-size: 32px;
+  }
+
+  .hero .hero__content .hero__content-info .hero__content-info-text{
+    width: 177px;
+    height: auto;
+    line-clamp: 4;
+  -webkit-line-clamp: 4;
+  }
+
+  .hero .hero__content-background .hero__content-background-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .btn {
+    width: fit-content;
+    padding: 12px 24px;
+    font-size: 12px;
+  }
+  .btn-black-white{
+    background: var(--trasnparent) !important;
+  }
+  .star {
+    width: 16px;
+    height: 16px;
+    background-size: contain;
+  }
+}
+
+
+
+
+
